--- a/package.json
+++ b/package.json
@@ -19,5 +19,22 @@
     "samples": "echo \"Error: no compile script defined\" && exit 1",
     "test": "echo \"Error: no compile script defined\" && exit 1",
     "transpile": "echo \"Error: no compile script defined\" && exit 1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@microsoft/api-extractor": "^7.6.0",
+    "@microsoft/tsdoc": "^0.12.15",
+    "@typescript-eslint/eslint-plugin": "^2.7.0",
+    "@typescript-eslint/parser": "^2.7.0",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^23.0.4",
+    "jest": "^24.9.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.27.0",
+    "typescript": "^3.7.2"
   }
 }
