--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -3,6 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "declaration": true,
+    "lib": ["es2019"],
     "module": "es6",
     "moduleResolution": "node",
     "noImplicitAny": true,
