chore(@arc/sdk): add babel config
Add a babel configuration to the `package.json` file to provide Jest the
ability to properly run tests within the package.

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -10,6 +10,13 @@
   "contributors": [
     "InteractiveTimmy"
   ],
+  "babel": {
+    "presets": [
+      [
+        "@babel/preset-env"
+      ]
+    ]
+  },
   "entries": {
     "build": "./build/sdk.js",
     "dist": "./build/index.js",
